--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -22,7 +22,7 @@ requirements:
   run:
     - python >={{ python_min }}
     - cffi
-    - adal >=0.4.2
+    - msal >=1.16.0,<2
     - requests >=2.20.0
 
 test:
